Wrap commit in try blocks Fix division by zero happening because of upgrade from spider->social Change dashboard name to UB Guardian to match our naming convention

--- a/ScrapyKeeper/app/static/css/app.css
+++ b/ScrapyKeeper/app/static/css/app.css
@@ -45,3 +45,11 @@ canvas {
 .label, .btn {
     opacity: 0.75
 }
+
+.table {
+	height: 100%;
+}
+td.text-args {
+	width: 100%;
+    height: 100%;
+}
